@@ -6,23 +6,19 @@ import controller.LaskuController;
 import controller.VarausController;
 import javafx.application.Platform;
 import javafx.concurrent.Task;
-import javafx.geometry.Pos;
 import javafx.scene.control.*;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
-import model.DAO.AsiakasDAO;
 import model.enteties.Asiakas;
 import model.enteties.Huone;
 import model.enteties.Lasku;
 import model.enteties.Varaus;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
-import java.util.stream.Collectors;
 import model.service.LocaleManager;
 
 public class CheckIn {
@@ -116,7 +112,7 @@ public class CheckIn {
             if (newValue != null) {
                 List<Huone> filteredRooms = huoneTable.getItems().stream()
                         .filter(huone -> huone.getHuone_tyyppi_fi().equals(newValue))
-                        .collect(Collectors.toList());
+                        .toList();
                 huoneTable.getItems().setAll(filteredRooms);
             }
         });
@@ -159,9 +155,7 @@ public class CheckIn {
 
          */
 
-        checkInButton.setOnAction(e -> {
-            CheckInButtonAction(huoneTable, varausTable);
-        });
+        checkInButton.setOnAction(e -> checkInButtonAction(huoneTable, varausTable));
         VBox checkIn = new VBox(20);
         checkIn.getChildren().addAll(huoneTiedot, varausInfo, checkInButton);
         return checkIn;
@@ -257,13 +251,10 @@ public class CheckIn {
         new Thread(fetchVarauksetTask).start();
     }
 
-
-
-    private void CheckInButtonAction(TableView<Huone> huoneTable, TableView<Varaus> varausTable) {
+    private void checkInButtonAction(TableView<Huone> huoneTable, TableView<Varaus> varausTable) {
         Huone selectedRoom = huoneTable.getSelectionModel().getSelectedItem();
         Varaus selectedVaraus = varausTable.getSelectionModel().getSelectedItem();
         if (selectedRoom != null && selectedVaraus != null) {
-            Integer previousRoom = selectedRoom.getHuone_id();
 
             if (selectedVaraus.getHuoneId() != null) {
                 huoneController.updateHuoneStatusById(selectedVaraus.getHuoneId(), bundle.getString("huone_tila.vapaa"));
